# ROS

csuro_bumpgo_cpp/src/: nodo_bumpgo.cpp
csuro_comms_cpp/: CMakeLists.txt
csuro_intro_cpp/: CMakeLists.txt
csuro_intro_cpp/src/: nodo_sub.cpp
csuro_manipulation/: .cproject  .project  CMakeLists.txt  package.xml
csuro_manipulation/launch/: arm.launch
csuro_manipulation/src/: pick_manipulation_node.cpp  test_manipulation_node.cpp
csuro_navigation/include/csuro_navigation/: csuro_global_planner.h
csuro_navigation/launch/: navigation.launch  navigationsim.launch  slam_mapping.launch
csuro_navigation/maps/: mapa0_20.pgm  mapa0_20.yaml  mapareal.pgm  mapareal.yaml  mapilla.pgm  mapilla.yaml  maze.pgm  maze.yaml
csuro_navigation/param/: costmap_common_params.yaml  costmap_common_params.yaml~  dwa_local_planner_params.yaml
csuro_navigation/src/: csuro_global_planner.cpp
csuro_robots/definition/sim/: asus_xtion_pro.urdf.xacro  camera_properties.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  turtlebot_gazebo.urdf.xacro
csuro_robots/definition/sonny/: .gitignore  asus_xtion_pro.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  my_laser_config.yaml~
csuro_robots/launch/: sim.launch  sonny.launch
csuro_sensors/: CMakeLists.txt
csuro_sensors/src/: nodo_rgbd_filter.cpp  nodo_rgbd_filter_sim.cpp  nodo_rgbd_tf.cpp
csuro_tools/: CMakeLists.txt  package.xml
csuro_tools/src/: nodo_hsv_sim.cpp  nodo_hsv_tuner_2d.cpp
follow_ball/: .cproject  CMakeLists.txt  CMakeLists.txt~  package.xml
follow_ball/src/: follow_ball_node.cpp
follow_lines/: .cproject  .project  CMakeLists.txt  package.xml
follow_lines/src/: follow_lines_node.cpp
search_3d/: .cproject  .project  CMakeLists.txt  package.xml
search_3d/launch/: real.launch  sim.launch
search_3d/msg/: ObsMsg.msg
search_3d/src/: search_ball.cpp  search_obj.cpp
